[package]
name = "john-wick-parse"
version = "2.1.2"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[dependencies]
byteorder = "1.2"
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
erased-serde = "0.3"
bitreader = "0.3.1"
glm = "0.2"
image = { git = "https://github.com/SirWaddles/image" }

[dependencies.half]
version ="1.3"
features = ["serde", "std"]