[package]
name = "john-wick-parse"
version = "4.0.0"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[dependencies]
byteorder = "1.2"
hex = "0.3"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
erased-serde = "0.3"
bitreader = "0.3.1"
glm = "0.2"
image = "0.22"
libloading = "0.5"

[dependencies.half]
version ="1.3"
features = ["serde", "std"]
